// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlexItem can be hidden  1`] = `
.c0 {
  display: none;
}

<div
  className="c0 "
  hidden={true}
/>
`;

exports[`FlexItem default  1`] = `
<div
  className=""
>
  💪
</div>
`;

exports[`FlexItem supports alignSelf  1`] = `
.c0 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0 "
/>
`;

exports[`FlexItem supports basis  1`] = `
.c0 {
  -webkit-flex-basis: 100px;
  -ms-flex-preferred-size: 100px;
  flex-basis: 100px;
}

<div
  className="c0 "
/>
`;

exports[`FlexItem supports flex  1`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="c0 "
/>
`;

exports[`FlexItem supports flex  2`] = `
.c0 {
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
}

<div
  className="c0 "
/>
`;

exports[`FlexItem supports flex  3`] = `
.c0 {
  -webkit-flex: 1 2 100px;
  -ms-flex: 1 2 100px;
  flex: 1 2 100px;
}

<div
  className="c0 "
/>
`;

exports[`FlexItem supports flex  4`] = `
.c0 {
  -webkit-flex: 1 50px;
  -ms-flex: 1 50px;
  flex: 1 50px;
}

<div
  className="c0 "
/>
`;

exports[`FlexItem supports order  1`] = `
.c0 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

<div
  className="c0 "
/>
`;

exports[`FlexItem supports order  2`] = `
.c0 {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

<div
  className="c0 "
/>
`;
